karl package Changelog
======================

Unreleased
----------

- Fixed UI bug where actions in folder views did not correspond to user's
  permissions.  (LP #594180)

3.35 (2010-06-08)
-----------------

- Members views were not updated to use the new websites field after multiple
  websites change from 3.34, which caused an unexpected parameter error when
  creating a new profile after invitation. Fixed and updated tests. (LP #591267).

- Fixed bug in whitelist--address matching is now normalized to be indifferent
  to the inclusion or exclusion of a name part with an email address.  (IE,
  'Fred Flintstone <test@example.com>' == 'test@example.com')

3.34 (2010-06-04)
-----------------

- Updated formatting for wiki body in e-mail alerts (LP #588905)

- Added a ``site_announce`` script to set / clear the site announcement
  text from the command line (LP #579520).

- Ensured that wiki pages cannot be added outside of the wiki tool
  (LP #586458).

- Made profiles support multiple websites (LP #554018).

- updated maintenance page (LP #587432)

- Changed HTML ID for email icon in blog listing for customizations
  (LP #582500).

- Added custom.css link into wsgi_errormsg.pt (LP #587104).

- Duplicated views from old mailin monitor as new views which use postoffice.
  Admin UI will point to new views if repoze.postoffice is being used,
  otherwise it will still use the old views.

- LP #588303 Added fax to profile view.

- LP #589743 Form topic add comment form was still assuming old formencode
  system.  It has been updated to be current.

- LP #589814 Fixed broken add user form.

- LP #554018 Added special case in cico for website in profile import. (Used by
  OSI's gsa_sync.)

3.33 (2010-05-24)
-----------------

- Work around chameleon bug where the new ``next`` builtin in Python 2.6.x
  was shadowing the value passed from the view, breaking the Twill tests
  (and the reference manual views) under Python 2.6.x (LP #534599).
