@@ -237,7 +237,9 @@ def get_email(object, default):
     return email.lower()
 
 def get_allowed_to_view(object, default):
-    return principals_allowed_by_permission(object, 'view')
+    principals = principals_allowed_by_permission(object, 'view')
+    print principals
+    return principals
 
 def get_lastfirst(object, default):
     if not IProfile.providedBy(object):
